# sktd

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  flake.nix
.github/workflows/: build_and_test.yaml  lint.yaml
cmake/: base.cmake  compilers.cmake  utils.cmake  warnings.cmake
include/boilerplate/: add.hh
include/sktd/: allocator.hh  assert.hh  atomic_counter.hh  attributes.hh  build_config.hh  error.hh  exception.hh  mem_utils.hh  min_max.hh  result.hh  span.hh  string.hh  type_aliases.hh  type_traits.hh  utility.hh
source/: add.cc  allocator.cc  atomic_counter.cc  main.cc  result.cc  string.cc
tests/: add_test.cc
